Fixing alignment

--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,5 +1,5 @@
 #form {
-  box-shadow: 0px 0px 5px 5px grey;
+  box-shadow: 0px 0px 5px 5px rgb(255, 121, 188);
   vertical-align: middle;
   text-align: center;
   padding: 2%;
@@ -7,11 +7,11 @@
   border: grey;
   background-image: linear-gradient(
     to left bottom,
-    #000000,
-    #3b3b3b,
-    #777777,
-    #b9b9b9,
-    #ffffff
+    #de0651,
+    #ea4376,
+    #f36798,
+    #f987b8,
+    #fda6d4
   );
   color: white;
   width: fit-content;
